[gd_scene load_steps=3 format=3 uid="uid://bjg416e18obow"]

[ext_resource type="Theme" uid="uid://ccpauq2da4rfu" path="res://themes/default_theme.tres" id="1_gc2sy"]
[ext_resource type="Script" uid="uid://d3povsss8melr" path="res://hud/end_level_screen.gd" id="2_gc2sy"]

[node name="EndLevelScreen" type="AspectRatioContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gc2sy")
script = ExtResource("2_gc2sy")
metadata/_custom_type_script = "uid://b3qvgg405ygo1"

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Backing" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -57.0
offset_right = 77.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2

[node name="StageClearTitleText" type="Label" parent="Control/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Stage Clear"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="Control/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Score: 000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeBonusText" type="Label" parent="Control/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Time Bonus: 000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemainingHPBonusText" type="Label" parent="Control/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Health Bonus: 000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalScoreText" type="Label" parent="Control/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "TotalScore 000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -168.0
offset_right = 37.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "Continue"
